[gd_scene load_steps=19 format=3 uid="uid://4fyoq8npekf0"]

[ext_resource type="PackedScene" uid="uid://barl4q1kugrmm" path="res://scenes/gameplay/pause-layer/pause-layer.tscn" id="2"]
[ext_resource type="Script" path="res://scenes/gameplay/CharacterBody2D.gd" id="4_ka8d4"]
[ext_resource type="Texture2D" uid="uid://c4lp76ubmqyod" path="res://assets/sprites/sokoban_tilesheet.png" id="4_yab2s"]
[ext_resource type="Script" path="res://scenes/gameplay/gameplay.gd" id="5"]
[ext_resource type="Script" path="res://scenes/gameplay/Tile.gd" id="5_5bixp"]

[sub_resource type="GDScript" id="GDScript_dq7no"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnt0r"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_s5k8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_itt4n"]
resource_name = "idle_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [52]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_n6m0c"]
resource_name = "idle_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [78]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yybpy"]
resource_name = "idle_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [78]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ng65g"]
resource_name = "idle_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [55]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pbegr"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [53, 52, 54, 52]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o3q17"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [79, 78, 80, 78]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y3uam"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [79, 78, 80, 78]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_opljg"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 55, 57, 55]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pwwm6"]
_data = {
"RESET": SubResource("Animation_s5k8f"),
"idle_down": SubResource("Animation_itt4n"),
"idle_left": SubResource("Animation_n6m0c"),
"idle_right": SubResource("Animation_yybpy"),
"idle_up": SubResource("Animation_ng65g"),
"walk_down": SubResource("Animation_pbegr"),
"walk_left": SubResource("Animation_o3q17"),
"walk_right": SubResource("Animation_y3uam"),
"walk_up": SubResource("Animation_opljg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbfks"]
size = Vector2(100, 100)

[node name="Gameplay" type="Node" node_paths=PackedStringArray("player")]
script = ExtResource("5")
player = NodePath("Player")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 320)
scale = Vector2(17.84, 5.6)
zoom = Vector2(0.8, 0.8)

[node name="PauseLayer" parent="." instance=ExtResource("2")]

[node name="UIButtons" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 104.0
offset_bottom = 104.0
script = SubResource("GDScript_dq7no")

[node name="MarginContainer" type="MarginContainer" parent="UIButtons"]
layout_mode = 0
offset_left = -57.0
offset_top = 605.0
offset_right = 262.0
offset_bottom = 645.0

[node name="HBoxContainer" type="HBoxContainer" parent="UIButtons/MarginContainer"]
layout_mode = 2

[node name="Action1" type="Button" parent="UIButtons/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Action 1"

[node name="Action2" type="Button" parent="UIButtons/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Action 2
"

[node name="Action3" type="Button" parent="UIButtons/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Action 3"

[node name="FinishTurn" type="Button" parent="UIButtons/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Finish Turn"

[node name="APTLabel" type="Label" parent="UIButtons"]
layout_mode = 0
offset_left = -207.0
offset_top = 159.0
offset_right = -63.0
offset_bottom = 211.0
text = "Acciones por
turno"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsPerTurn" type="Label" parent="UIButtons"]
layout_mode = 0
offset_left = -212.0
offset_top = 223.0
offset_right = -68.0
offset_bottom = 275.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MOVLabel" type="Label" parent="UIButtons"]
layout_mode = 0
offset_left = -213.0
offset_top = 341.0
offset_right = -69.0
offset_bottom = 393.0
text = "Movimientos
disponibles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovementsPerAction" type="Label" parent="UIButtons"]
layout_mode = 0
offset_left = -218.0
offset_top = 403.0
offset_right = -74.0
offset_bottom = 455.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("btnAction1", "btnAction2", "btnAction3", "actionsPerTurnText", "movementsPerActionText")]
z_index = 10
position = Vector2(192, 320)
script = ExtResource("4_ka8d4")
btnAction1 = NodePath("../UIButtons/MarginContainer/HBoxContainer/Action1")
btnAction2 = NodePath("../UIButtons/MarginContainer/HBoxContainer/Action2")
btnAction3 = NodePath("../UIButtons/MarginContainer/HBoxContainer/Action3")
actionsPerTurnText = NodePath("../UIButtons/ActionsPerTurn")
movementsPerActionText = NodePath("../UIButtons/MovementsPerAction")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("4_yab2s")
flip_h = true
hframes = 13
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_fnt0r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_pwwm6")
}

[node name="Tile1" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(64, 64)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile1"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile1"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile2" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(192, 64)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile2"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile2"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile3" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(320, 64)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile3"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile3"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile4" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(448, 64)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile4"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile4"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile5" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(576, 64)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile5"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile5"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile6" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(704, 64)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile6"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile6"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile7" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(832, 64)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile7"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile7"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile8" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(960, 64)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile8"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile8"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile9" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(64, 192)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile9"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile9"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile10" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(192, 192)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile10"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile10"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile11" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(320, 192)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile11"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile11"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile12" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(448, 192)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile12"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile12"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile13" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(576, 192)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile13"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile13"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile14" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(704, 192)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile14"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile14"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile15" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(832, 192)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile15"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile15"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile16" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(960, 192)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile16"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile16"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile17" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(64, 320)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile17"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile17"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile18" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(192, 320)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile18"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile18"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile19" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(320, 320)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile19"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile19"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile20" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(448, 320)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile20"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile20"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile21" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(576, 320)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile21"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile21"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile22" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(704, 320)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile22"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile22"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile23" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(832, 320)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile23"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile23"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile24" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(960, 320)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile24"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile24"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile25" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(64, 448)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile25"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile25"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile26" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(192, 448)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile26"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile26"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile27" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(320, 448)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile27"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile27"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile28" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(448, 448)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile28"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile28"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile29" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(576, 448)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile29"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile29"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile30" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(704, 448)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile30"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile30"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile31" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(832, 448)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile31"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile31"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile32" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(960, 448)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile32"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile32"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile33" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(64, 576)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile33"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile33"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile34" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(192, 576)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile34"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile34"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile35" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(320, 576)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile35"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile35"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile36" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(448, 576)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile36"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 86

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile36"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile37" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(576, 576)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile37"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile37"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile38" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(704, 576)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile38"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile38"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile39" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(832, 576)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile39"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile39"]
shape = SubResource("RectangleShape2D_hbfks")

[node name="Tile40" type="Area2D" parent="." node_paths=PackedStringArray("player")]
position = Vector2(960, 576)
script = ExtResource("5_5bixp")
player = NodePath("../Player")

[node name="Sprite2D" type="Sprite2D" parent="Tile40"]
texture = ExtResource("4_yab2s")
hframes = 13
vframes = 8
frame = 87

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tile40"]
shape = SubResource("RectangleShape2D_hbfks")

[connection signal="pressed" from="UIButtons/MarginContainer/HBoxContainer/Action1" to="." method="_on_action_1_pressed"]
[connection signal="pressed" from="UIButtons/MarginContainer/HBoxContainer/Action2" to="." method="_on_action_2_pressed"]
[connection signal="pressed" from="UIButtons/MarginContainer/HBoxContainer/Action3" to="." method="_on_action_3_pressed"]
[connection signal="pressed" from="UIButtons/MarginContainer/HBoxContainer/FinishTurn" to="." method="_on_finish_turn_pressed"]
